--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
     "require": {
         "php-amqplib/php-amqplib": ">=3.0"
+    },
+    "scripts": {
+        "apt-get update",
+        "git clone https://github.com/ksoz/IT490_Group3_CastleWar.git",
+        "php worker.php"
     }
 }
