--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "scripts": {
         "update-deploy-containers": [
             "sudo git pull origin master",
-            "service mysql start",
+            "sudo service mysql start",
             "php worker.php"
             ]
     }
